al hacer click en una foto del año se muestra el detalle de la misma

--- a/angular/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.html
+++ b/angular/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.html
@@ -66,7 +66,7 @@
                 <p>
                   <b>Título:</b> {{all_data[index].image.title}}  </p>
                 <p>
-                <p>
+                <p *ngIf="all_data[index]?.section">
                   <b>Sección:</b> {{all_data[index]?.section?.name}} </p>
                 <p *ngIf="!open"> 
                   <b>Premio: </b>
