--- a/angular/src/app/herramientas/herramientas.page.html
+++ b/angular/src/app/herramientas/herramientas.page.html
@@ -72,9 +72,54 @@
           <ion-card-content>
             <input #folderInput type="file" webkitdirectory directory multiple (change)="onFolderSelected($event)" style="display: none;" />
             <ion-button expand="block" color="success" (click)="folderInput.click()">Seleccionar Carpeta</ion-button>
+            <ion-button expand="block" color="primary" (click)="abrirModalAgregarGrabacion()">Agregar Grabación</ion-button>
           </ion-card-content>
         </ion-card>
       </ion-col>
     </ion-row>
   </ion-grid>
-</ion-content> 
+</ion-content>
+
+<!-- Modal para Agregar Grabación -->
+<ion-modal #modalGrabacion [isOpen]="isModalGrabacionOpen" (didDismiss)="cerrarModalGrabacion()">
+  <ng-template>
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Agregar Grabación</ion-title>
+        <ion-buttons slot="end">
+          <ion-button (click)="cerrarModalGrabacion()">Cerrar</ion-button>
+        </ion-buttons>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <ion-item>
+        <ion-label position="stacked">Temporada</ion-label>
+        <ion-select [(ngModel)]="grabacionData.temporada" interface="popover">
+          <ion-select-option [value]="anioActual">{{anioActual}}</ion-select-option>
+          <ion-select-option [value]="anioAnterior">{{anioAnterior}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+      
+      <ion-item [class.ion-invalid]="urlInvalida && grabacionData.url.length > 0">
+        <ion-label position="stacked">URL</ion-label>
+        <ion-input 
+          [(ngModel)]="grabacionData.url" 
+          (ionChange)="validarUrl()" 
+          placeholder="https://ejemplo.com/grabacion.json"
+          type="url">
+        </ion-input>
+      </ion-item>
+      <ion-note color="danger" *ngIf="urlInvalida && grabacionData.url.length > 0">
+        Por favor, ingrese una URL válida
+      </ion-note>
+      
+      <ion-button 
+        expand="block" 
+        (click)="agregarGrabacion()" 
+        [disabled]="urlInvalida || !grabacionData.url"
+        class="ion-margin-top">
+        Agregar
+      </ion-button>
+    </ion-content>
+  </ng-template>
+</ion-modal> 
