Se agrega enlace de foto del año

--- a/angular/src/app/concursos/concursos.page.html
+++ b/angular/src/app/concursos/concursos.page.html
@@ -195,6 +195,7 @@
                   *ngIf="item.tipo === 'fotos-anio'"
                   [fotos]="item.fotosAnio"
                   [temporada]="item.temporada"
+                  [url_grabacion]="item.url_grabacion"
                 ></app-fotos-anio-card>
               </ng-container>
             </ion-list>
