--- a/angular/src/app/fotoclubs-abm/fotoclubs-abm.page.html
+++ b/angular/src/app/fotoclubs-abm/fotoclubs-abm.page.html
@@ -51,13 +51,18 @@
                 <ion-grid>
                   <ion-col>
                     <ion-row>
-                      <ion-col size="10.5" size-md="11">
+                      <ion-col size="8.5" size-md="9">
                         <ion-row>
                           <app-th-sort
                             [sortFn]="funcionesOrdenamiento['fotoclub']"
                             [(data)]="fotoclubs"
                             title="Organización"
                           ></app-th-sort>
+                        </ion-row>
+                      </ion-col>
+                      <ion-col size="2" size-md="1">
+                        <ion-row>
+                          <b>Habilitado</b>
                         </ion-row>
                       </ion-col>
                       <ion-col size="1.5" size-md="1">
@@ -73,7 +78,7 @@
               <ion-item *ngFor="let f of fotoclubs">
                 <ion-grid>
                   <ion-row size="12">
-                    <ion-col size="12" size-sm="10.5" size-md="11">
+                    <ion-col size="12" size-sm="8.5" size-md="9">
                       <ion-row
                         class="ion-align-items-center ion-justify-content-between"
                       >
@@ -115,6 +120,15 @@
                           </ion-buttons>
                         </ion-col>
                       </ion-row>
+                    </ion-col>
+                    <ion-col
+                      size="2"
+                      size-md="1"
+                      class="ion-align-self-center ion-hide-sm-down"
+                    >
+                      <ion-badge [color]="f.enabled ? 'success' : 'danger'">
+                        {{ f.enabled ? 'Si' : 'No' }}
+                      </ion-badge>
                     </ion-col>
                     <ion-col
                       size="1.5"
