--- a/angular/src/global.scss
+++ b/angular/src/global.scss
@@ -154,7 +154,22 @@ ion-note{
 }
 
 /* Modal del ion-select de Fotoclub/Agrupación/Institución (usuarios-abm) */
+@media (max-width: 767px) {
+  /* En mobile que ocupe todo el ancho */
+  ion-alert.fotoclub-select-modal {
+    --width: 100vw;
+    --max-width: 100vw;
+  }
+
+  ion-alert.fotoclub-select-modal .alert-wrapper {
+    width: 100vw;
+    max-width: 100vw;
+    margin: 0; /* evitar márgenes laterales */
+  }
+}
+
 @media (min-width: 768px) {
+  /* En desktop, ancho fijo más grande */
   ion-alert.fotoclub-select-modal {
     --width: 600px;
     --max-width: 600px;
